fix boxes having no background on IE8

--- a/templates/components/headers/_box.scss
+++ b/templates/components/headers/_box.scss
@@ -31,3 +31,10 @@
     }
   }
 }
+
+.ie8 {
+  .uomcontent header.with-box .box {
+    background: $white;
+    margin: 30px auto;
+  }
+}
